@@ -27,6 +27,7 @@ t/20000_functions/20010_ask.t
 t/20000_functions/20014_draw.t
 t/20000_functions/20018_Flags.t
 t/20000_functions/20030_run.t
+t/20000_functions/20050_fd.t
 t/20000_functions/21000_Version.t
 t/40000_widgets/40010_clock.t
 t/40000_widgets/40013_dial.t
