@@ -17,7 +17,6 @@ use warnings;
 use Test::More 0.82 tests => 1;
 use Module::Build qw[];
 use Time::HiRes qw[];
-use Test::NeedsDisplay ':skip_all';
 my $test_builder = Test::More->builder;
 BEGIN { chdir '../..' if not -d '_build'; }
 use lib 'inc', 'blib/lib', 'blib/arch', 'lib';
